# ezmirror

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  gitignore  mirrors.json  setup.sh
.github/workflows/: release.yml
docs/: README.md  api.md  architecture.md  configuration.md  deployment.md
python/: manage.py  rollback.py  setup.py  update.py
src/: config.c  config.rs  ezmirord.h  main.rs  metrics.c  metrics.rs  status.c  status.rs  sync.c  sync.rs
src-c/: main.c
templates/: footer.html  header.html  style.css
web/: ezmirror-panel.service  panel.py
