[package]
name = "ezmirord"
version = "0.6.0"
edition = "2021"
description = "ezmirror sync daemon - Rust port"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release]
opt-level = 2
lto = true
strip = true
